--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,13 @@ services:
     ports:
       - "3000:3000"
     environment:
-      NODE_ENV: "dev"
+      NODE_ENV: "development"
+      PORT: "3000"
+      DB_PORT: "3306"
+      DB_HOST: "db"
+      DB_USERNAME: "root"
+      DB_PASSWORD: "password"
+      DB_DATABASE: "db"
     volumes:
       - ./src:/app/src
       - ./test:/app/test
