--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -20,8 +20,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
-    "migration:generate": "yarn run prebuild && yarn run build && yarn run typeorm migration:generate -n",
-    "migration:run": "yarn run prebuild && yarn run build && yarn run typeorm migration:run"
+    "migration:generate": "yarn run build && yarn run typeorm migration:generate -n",
+    "migration:run": "yarn run build && yarn run typeorm migration:run"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
